Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -106,9 +106,9 @@ Department of Geoscience \\
     \vbox{}\vfill
     {%
       \raggedleft
-%     This template can be found at \\
-%     \url{https://???} \\
-%      \vspace{2cm}
+     This template can be found at \\
+     \url{https://github.com/cfbe/NTNU-IGV-Thesis-template/} \\
+      \vspace{2cm}
       This template is an updated \\ 
       and expanded version of an \\
       earlier template created by \\
