--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@ June 2025 \\
 \vspace{0.2cm}
 \noindent Norwegian University of Science and Technology \\
 Faculty of Engineering \\
-Department of Geoscience \\
+Department of Geosciences \\
 
 \begin{figure}[h]
     \includegraphics[width=0.28\textwidth]{Figures/ntnu_basic.png}
